--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,4 +1,4 @@
-@use "functions"as *;
+@use "functions" as *;
 
 // Utility Map 工具集
 
@@ -7,39 +7,45 @@ $utilities: () !default;
 // Spacing 间距 以16px为基准
 
 $spacer: 16px !default;
-$spacers: (0: 0,
-  4: $spacer * .25,
-  8: $spacer * .5,
-  12: $spacer * .75,
+$spacers: (
+  0: 0,
+  4: $spacer * 0.25,
+  8: $spacer * 0.5,
+  12: $spacer * 0.75,
   16: $spacer,
   24: $spacer * 1.5,
   32: $spacer * 2,
-  48: $spacer * 3) !default;
+  48: $spacer * 3,
+) !default;
 $negative-spacers: negativify-map($spacers) !default;
 
 // Border 边框
 
-$border-color: rgba(0, 0, 0, .12) !default;
-$borders: (0: 0,
+$border-color: rgba(0, 0, 0, 0.12) !default;
+$borders: (
+  0: 0,
   1: 1px solid $border-color,
   2: 2px solid $border-color,
   4: 4px solid $border-color,
-  8: 8px solid $border-color) !default;
+  8: 8px solid $border-color,
+) !default;
 
 // Border radius 圆角
 
 $radius-base: 4px !default;
-$radius: (0: 0,
+$radius: (
+  0: 0,
   4: $radius-base,
   8: $radius-base * 2,
   12: $radius-base * 3,
   16: $radius-base * 4,
-  full: 9999px) !default;
-
+  full: 9999px,
+) !default;
 
 // Text 文本
 
-$font-wieghts: (100: 100,
+$font-wieghts: (
+  100: 100,
   200: 200,
   300: 300,
   400: 400,
@@ -47,19 +53,23 @@ $font-wieghts: (100: 100,
   600: 600,
   700: 700,
   800: 800,
-  900: 900) !default;
+  900: 900,
+) !default;
 
-$font-sizes: (0: 0,
+$font-sizes: (
+  0: 0,
   10: 10px,
   12: 12px,
   14: 14px,
   16: 16px,
   18: 18px,
-  20: 20px) !default;
+  20: 20px,
+) !default;
 
 // Sizing 宽高
 
-$sizes: (0: 0,
+$sizes: (
+  0: 0,
   20: 20%,
   25: 25%,
   40: 40%,
@@ -68,4 +78,5 @@ $sizes: (0: 0,
   75: 75%,
   80: 80%,
   full: 100%,
-  auto: auto) !default;
+  auto: auto,
+) !default;
